syntax = "proto3";

package node.topology;

option go_package = "github.com/open-panoptes/opni/plugins/topology/apis/node";

service NodeTopologyCapability {
  rpc Sync(SyncRequest) returns (SyncResponse);
}

message TopologyCapabilityConfig {
  bool                   enabled    = 1;
  repeated string        conditions = 2;
  TopologyCapabilitySpec spec       = 3;
}

message TopologyCapabilitySpec {
  // TODO(topology) add spec fields
}

enum ConfigStatus {
  Unknown     = 0;
  UpToDate    = 1;
  NeedsUpdate = 2;
}

message SyncRequest {
  TopologyCapabilityConfig currentConfig = 1;
}

message SyncResponse {
  ConfigStatus             configStatus  = 1;
  TopologyCapabilityConfig updatedConfig = 2;
}
